<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D11E1E"
    tools:context=".TCKontrolActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:animateLayoutChanges="false"
        android:textAlignment="center"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp"
        app:contentPadding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/linear_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tckn_kontrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tckn_kontrol0"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tc_no_giriniz"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dip"
                android:text="@string/kontrol_et" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>